# notes

./: .gitignore  README.md  test-dsu-rand  test-dsu-rand.cpp
3d-bin-packing/: README.md
algorithms/: README.md  examples.md  ide.md  scripts.md  stress.md  struct.md
algorithms/scripts/: dbg  run
algorithms/src/stress/: search.cpp  sort.cpp
algorithms/src/vector/: vector-class.cpp  vector-main.cpp  vector-struct.cpp
dijkstra-a-star/: .gitignore  CMakeLists.txt  README.md  dijkstra-a-star.ipynb  llm-reading-list.md  main.cpp  reading-list.md
dijkstra-a-star/src/code/: estimator.cpp  estimator.h
dtsp/: dtsp-a-star  dtsp-a-star.cpp  index.html
p2p-shortest-path/: README.md
p2p-shortest-path/algorithms/: arc-flags.md  landmarks.md
social-network-clustering/: README.md  clustering  clustering.cpp
social-network-clustering/clustering.dSYM/Contents/Resources/DWARF/: clustering
social-network-clustering/clustering.dSYM/Contents/Resources/Relocations/aarch64/: clustering.yml
strip-packing/: 3d-packing.ipynb  README.md  deepseek.md  perplexity.md
strip-packing/3d-packing/: README.md  main.cpp  main.py  packing.cpp  test.py
strip-packing/3d-packing/main.dSYM/Contents/Resources/DWARF/: main
strip-packing/3d-packing/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tp-seminars/: README.md  bash.md  cmake.md  cmd.md  docker.md  git.md  google-test.md
tp2-seminars/: README.md  intro.md  project.md
tp2-seminars/patterns/: README.md  fabric.md  intro.md
